--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -19,32 +19,37 @@
 	</properties>
 
 	<dependencies>
-	
-	<!-- JDBC -->
-	<dependency>
-	    <groupId>org.springframework.boot</groupId>
-	    <artifactId>spring-boot-starter-jdbc</artifactId>
-	    <version>2.3.2.RELEASE</version>
-	</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.12</version>
+			<scope>provided</scope>
+		</dependency>
+		<!-- JDBC -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+			<version>2.3.2.RELEASE</version>
+		</dependency>
 
-	<!-- MyBatis -->
-	<dependency>
-	    <groupId>org.mybatis</groupId>
-	    <artifactId>mybatis</artifactId>
-	    <version>3.4.2</version>
-	</dependency>
-	<dependency>
-	  <groupId>org.mybatis</groupId>
-	  <artifactId>mybatis-spring</artifactId>
-	  <version>1.3.2</version>
-	</dependency>
+		<!-- MyBatis -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.4.2</version>
+		</dependency>
+		<dependency>
+		  <groupId>org.mybatis</groupId>
+		  <artifactId>mybatis-spring</artifactId>
+		  <version>1.3.2</version>
+		</dependency>
 
-	<!-- MySQL -->
-	<dependency>
-	    <groupId>mysql</groupId>
-	    <artifactId>mysql-connector-java</artifactId>
-	    <version>8.0.21</version>
-	</dependency>
+		<!-- MySQL -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.21</version>
+		</dependency>
 	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
