--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb?serverTimezone=UTC&useSSL=false
-spring.datasource.username= gksdnf1
-spring.datasource.password= dnf16235
+spring.datasource.username=user1
+spring.datasource.password=1234
