--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb?serverTimezone=UTC&useSSL=false
 spring.datasource.username=user1
 spring.datasource.password=1234
+
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+# DEVTOOLS (DevToolsProperties jsp reload를 위한 property https://moregorenine.github.io/dev/spring-boot-devtools/ 참조)
+spring.devtools.livereload.enabled=true 
